--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   "dependencies": {
     "@heroicons/react": "2.1.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
